--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zestlet/fp",
-  "version": "0.0.5",
+  "version": "0.0.6-beta.1",
   "description": "TypeScript functional programming library with over 70% AI-generated code, featuring precise type inference and currying support",
   "publishConfig": {
     "access": "public",
